# 19_PersonnelApi_Logs_Documents/src/controllers/auth.controller.js
@@ -12,6 +12,20 @@ const passwordEncrypt = require("../helpers/passwordEncrypt");
 
 module.exports = {
   login: async (req, res) => {
+    /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Login'
+            #swagger.description = 'Login with username and password'
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    username: '*String',
+                    password: '*String',
+                }
+            }
+        */
+
     const { username, password } = req.body;
 
     if (username && password) {
@@ -52,6 +66,12 @@ module.exports = {
   },
 
   logout: async (req, res) => {
+    /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Logout'
+            #swagger.description = 'Delete token.'
+        */
+
     // Token Delete:
     // if (req.user) {
     //    const data = await Token.deleteOne({ userId: req.user._id })
