# 19_PersonnelApi_Logs_Documents/src/routes/auth.router.js
@@ -12,7 +12,8 @@ const auth = require("../controllers/auth.controller");
 // URL: /auth
 
 router.post("/login", auth.login);
-router.all("/logout", auth.logout);
+// router.all('/logout', auth.logout) // swaggerAutogen "all() ve use()"" methodlarını yakalamaz.
+router.get("/logout", auth.logout);
 
 /* ------------------------------------------------------- */
 module.exports = router;
